--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -15,7 +15,7 @@
 }
 
 .carousel .carousel-item:last-of-type {
-    background-image: url("https://4.bp.blogspot.com/-pxMLcrD3N7I/UjAMNkqM43I/AAAAAAAAABQ/2-etadUS_48/s640/flowers.jpg");
+    background-image: url("../img/ngajar-promo.png");
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
