--- a/public/css/star.css
+++ b/public/css/star.css
@@ -1,32 +1,24 @@
 @import "http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
-.box{
-  direction: rtl;
+
+.wrapper {
+  display: inline-block;
+}
+.wrapper * {
+  float: right;
+}
+input {
+  display: none;
+}
+label {
+  font-size: 30px;
 }
 
-.box ion-icon{
-  font-size: 40px;
-  color: #313131;
-  transition: 0.3s all;
-}
-
-.box ion-icon:hover{
-  color: #f1c40f;
-
-}
-
-.b1:hover ~ ion-icon{
+input:checked ~ label {
   color: #f1c40f;
 }
 
-.b2:hover ~ ion-icon{
+label:hover,
+label:hover ~ label {
   color: #f1c40f;
 }
-.b3:hover ~ ion-icon{
-  color: #f1c40f;
-}
-.b4:hover ~ ion-icon{
-  color: #f1c40f;
-}
-.b5:hover ~ ion-icon{
-  color: #f1c40f;
-}
+
